# iChem

./: .flake8  .gitignore  HPC_MULTIROUND_GUIDE.md  README.md  pyproject.toml  requirements.txt
LICENSES/: BSD-3-Clause.txt
iChem/: __init__.py  _config.py  cli.py  utils.py
iChem.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
iChem/bb_lean/: __init__.py  _config.py  _console.py  _memory.py  bitbirch.py  cli.py  fingerprints.py  similarity.py  smiles.py
iChem/bb_lean/_legacy/: bb_int64_dense.py
iChem/bblean/: __init__.py  _config.py  _console.py  _memory.py  _merges.py  _py_similarity.py  _timer.py  analysis.py  bitbirch.py  cli.py  fingerprints.py  hierarchical.py  multiround.py  plotting.py  similarity.py  utils.py
iChem/bblean/_legacy/: bb_uint8.py
iChem/bbreal/: __init__.py  _bbreal.py  bbreal.py  hierarchical.py
iChem/bitbirch/: __init__.py  _config.py  _hpc_final.py  _hpc_final_submit.py  _hpc_initial.py  _hpc_initial_submit.py  _hpc_midsection.py  _hpc_midsection_submit.py  cluster.py  cluster_hpc.py  cluster_hpc_initial.py  cluster_hpc_initial.sh  hierarchical.py  multiround_reclustering.py  old_bitbirch.py  optimal_threshold.py
iChem/iSIM/: __init__.py  _input_check.py  comp_sim.py  counters.py  isim.py  real.py  sampling.py  sigma.py
iChem/libchem/: __init__.py  _libchem_aux.py  libchem.py  libchem_big.py  libcomp_big.py  libcomparison.py
iChem/visualization/: __init__.py  cluster_connect.py  mol_images.py  plots.py
scripts/: cluster_connect_vis.ipynb  cluster_libraries.py  compare_parallel_timing.py  fingerprint_sdf.py  fingerprint_smi.py  iSIM_start_guide.ipynb  libcomp_big_usage.ipynb  library_big_medoids.py  library_comp_big.py  library_compare.ipynb  parallelized_clustering.py  parallelized_clustering_from_fps.py  parallelized_clustering_from_smi.py  parallelized_lib_compare.py  parallelized_lib_compare_other.py  sdf_to_smi.py  test.py
tests/: test_bblean.py  test_iSIM.py  test_imports.py  test_libchem.py  test_real.py  test_sampling.py  test_utils.py
tests/data/: mcule_natural_products.smi  molecules.smi
