[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iChem"
version = "0.1"
description = "Module to use iSIM (instant Similarity) to perform typical Cheminformatics tools: clustering, diversity selection, similarity calculations, activity cliff quantification, chemical space visualization, etc."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Kenneth Lopez", email = "klopezperez@ufl.edu" }
]
dependencies = [
    "numpy>=2.0",
    "matplotlib",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "seaborn",
    "scikit-learn",
    "numexpr>=2.8.0",
    "rich",
    "psutil",
    "plotly",
    "nbformat>=4.2.0"
]

[project.optional-dependencies]
rdkit = ["rdkit"]
all = ["rdkit"]

[project.urls]
Homepage = "https://github.com/your-repo-url"

[tool.setuptools.packages.find]
where = ["."]